# vercel-py

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml  run_e2e_tests.py
integrations/vercel-apscheduler/: LICENSE  README.md  SCHEDULER.md  pyproject.toml
integrations/vercel-apscheduler/examples/cleanup/: .gitignore  README.md  main.py  pyproject.toml  vercel.json
integrations/vercel-apscheduler/tests/unit/: test_apscheduler_examples.py  test_apscheduler_integration.py
integrations/vercel-celery/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
integrations/vercel-celery/examples/chunks/: README.md  pyproject.toml  tasks.py  vercel.json
integrations/vercel-celery/tests/integration/: test_celery_vqs_worker.py
integrations/vercel-celery/tests/unit/: test_celery_broker.py  test_celery_examples.py  test_celery_result_backend.py
integrations/vercel-dramatiq/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
integrations/vercel-dramatiq/examples/chunks/: pyproject.toml  tasks.py  vercel.json
integrations/vercel-dramatiq/tests/integration/: test_dramatiq_vqs_worker.py
integrations/vercel-dramatiq/tests/unit/: test_dramatiq_broker.py  test_dramatiq_examples.py  test_dramatiq_result_backend.py
src/vercel/: CHANGELOG.md  README.md  __init__.py  __main__.py  client.py  env.py  headers.py  pyproject.toml  wait_until.py
src/vercel-cache/: CHANGELOG.md  README.md  pyproject.toml
src/vercel-cache/tests/: conftest.py
src/vercel-cache/tests/integration/: test_cache_sync_async.py
src/vercel-cache/vercel/cache/: __init__.py  cache_build.py  cache_in_memory.py  context.py  runtime_cache.py  types.py
src/vercel-headers/: CHANGELOG.md  README.md  pyproject.toml
src/vercel-headers/vercel/headers/: __init__.py
src/vercel-internal-core/: CHANGELOG.md  README.md  pyproject.toml
src/vercel-internal-core/tests/: test_byte_stream.py  test_http_transport_raw_body.py  test_http_transport_read_response.py  test_http_transport_streaming.py  test_http_transport_timeout.py  test_http_url_construction.py  test_iter_coroutine.py  test_options.py  test_root.py  test_session.py  test_time.py
src/vercel-internal-core/vercel/: __init__.py
src/vercel-internal-core/vercel/api/: __init__.py
src/vercel-internal-core/vercel/errors/: __init__.py
src/vercel-internal-telemetry/: CHANGELOG.md  README.md  hatch_build.py  pyproject.toml
src/vercel-oidc/: CHANGELOG.md  README.md  pyproject.toml
src/vercel-oidc/vercel/oidc/: __init__.py  token.py  utils.py
src/vercel-proxy/: README.md  pyproject.toml
src/vercel-proxy/tests/: conftest.py  test_proxy.py  test_responses.py  test_routes.py
src/vercel-proxy/vercel/proxy/: __init__.py  _app.py  _responses.py  _routing.py  matchers.py
src/vercel-queue/: CHANGELOG.md  README.md  pyproject.toml
src/vercel-queue/benchmarks/: async_load.py
src/vercel-queue/examples/: README.md  async_json_poll.py  subscriber_poll.py  subscriber_poll_trio.py  sync_json_poll.py
src/vercel-queue/examples/binary_buffer/: README.md  pyproject.toml  vercel.json
src/vercel-queue/examples/custom_transport/: README.md  invoice_transport.py  pyproject.toml  send_invoice.py  vercel.json
src/vercel-queue/examples/large_file_stream/: README.md  pyproject.toml  vercel.json
src/vercel-queue/tests/: __init__.py  conftest.py
src/vercel-sandbox/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/vercel-sandbox/examples/: sandbox_01_async_code_review.py  sandbox_02_sync_script_runner.py  sandbox_03_snapshot_restore.py  sandbox_04_dev_server.py  sandbox_06_streaming_files.py
src/vercel-sandbox/tests/: conftest.py  test_cli.py  test_options.py  test_public_contract.py  test_sandbox_api_client.py  test_sandbox_filesystem.py  test_sandbox_filesystem_write.py  test_sandbox_process.py  test_sandbox_public_flow.py  test_sandbox_snapshot.py  test_sandbox_streaming_archive.py  test_sandbox_text_reader.py  test_session.py
src/vercel/_core/: __init__.py  client.py  config.py  deployments.py  iter_coroutine.py  projects.py  transport.py
src/vercel/_http/: __init__.py  clients.py  config.py  iter_coroutine.py  transport.py
src/vercel/_internal/: auth.py  byte_stream.py  fs.py  iter_coroutine.py  pagination.py  payload.py  retryloop.py  runtime_context.py  time.py  url.py
src/vercel/_telemetry/: __init__.py  client.py  credentials.py  tracker.py
src/vercel/blob/: README.md  __init__.py  _core.py  _helpers.py  _put_helpers.py  _request.py  aio.py  api.py  client.py  errors.py  ops.py  types.py  utils.py
src/vercel/blob/aio/: __init__.py
src/vercel/cache/: README.md  __init__.py  _context.py  _core.py  aio.py  build_client.py  cache_build.py  cache_in_memory.py  context.py  in_memory_cache.py  index.py  purge.py  runtime_cache.py  types.py  utils.py
src/vercel/cron/: README.md  __init__.py  crontab.py
src/vercel/deployments/: README.md  __init__.py  _core.py  aio.py  client.py  deployments.py
src/vercel/functions/: README.md  __init__.py  _context.py  aio.py  headers.py  purge.py
src/vercel/functions_old_bad/: __init__.py  purge.py
src/vercel/internal/: README.md
src/vercel/oidc/: README.md  __init__.py  _core.py  aio.py  credentials.py  token.py  token_util.py  types.py
src/vercel/projects/: README.md  __init__.py  _core.py  aio.py  client.py  projects.py
src/vercel/sandbox/: README.md  __init__.py  __main__.py  _core.py  aio.py  api_client.py  base_client.py  command.py  models.py  network_policy.py  page.py  request_config.py  sandbox.py  snapshot.py  types.py
src/vercel/stable/: __init__.py  client.py  errors.py  options.py  pagination.py
src/vercel/telemetry/: __init__.py  client.py  credentials.py  tracker.py  wrapper.py
src/vercel/tests/: conftest.py  test_cron.py  test_distribution_composition.py  test_nanoid.py  test_runtime_compatibility.py  test_sync_async_parity.py  test_ulid.py
src/vercel/unstable/: ADR.md  README.md  __init__.py  testing.py
src/vercel/workflow/: README.md  __init__.py  api.py  core.py  errors.py  nanoid.py  py_sandbox.py  runtime.py  sandbox.py  world.py
(+554 files in other folders)
