[build-system]
requires = []
build-backend = "no_root_build"
backend-path = ["scripts"]

[dependency-groups]
dev = [
    "ruff==0.15.20",
    "pytest>=7.0.0,<10",
    "pytest-asyncio<2",
    "pytest-xdist<4",
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.30.0,<1",
    "hypothesis>=6.0.0,<7",
    "respx>=0.21.0,<1",
    "uvloop<1",
    "mypy>=1.20.2,<2",
    "build<2",
    "twine<7",
    "ty==0.0.55",
    "zizmor>=1.24.1,<2",
    "hatchling>=1.27.0,<2",
    "time-machine>=2.16,<3",
    "textual>=8.0.0,<9",
    "trio>=0.33.0,<1",
    "poethepoet>=0.48.0",
    "tox>=4",
    "tox-uv-bare",
    "tomli>=2.0.0,<3; python_version < '3.11'",
    "vendoring>=1,<2",
    "lograil~=0.5.0",
]

[tool.uv]
default-groups = ["dev"]
package = false
exclude-newer = "2 days"
exclude-newer-package = { lograil = "2026-07-22T00:00:00Z" }

[tool.uv.workspace]
members = ["src/*", "integrations/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--no-header --capture=tee-sys"
asyncio_mode = "auto"
markers = [
    "live: requires live API credentials (VERCEL_TOKEN, BLOB_READ_WRITE_TOKEN, etc.)",
]

[tool.tox]
requires = ["tox>=4", "tox-uv-bare"]
env_list = ["py310", "py311", "py312", "py313", "py314"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
package = "skip"
dependency_groups = ["dev"]
allowlist_externals = ["./scripts/test.sh"]
uv_sync_flags = ["--all-packages"]
commands = [["./scripts/test.sh", { replace = "posargs", extend = true }]]

[tool.mypy]
python_version = "3.10"
cache_dir = "$MYPY_CONFIG_FILE_DIR/.mypy_cache/root"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = [
    "src",
    "src/vercel-cache",
    "src/vercel-headers",
    "src/vercel-queue",
    "src/vercel-oidc",
    "src/vercel-proxy",
    "src/vercel-internal-telemetry",
    "integrations/vercel-celery",
    "integrations/vercel-dramatiq",
    "tests/stubs",
]

[[tool.mypy.overrides]]
module = [
    "vercel._internal.unstable",
    "vercel._internal.unstable.*",
    "vercel.unstable",
    "vercel.unstable.*",
]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_return_any = true

[tool.ty.environment]
python-version = "3.10"
root = ["./src", "./integrations"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["vercel"] }

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["E501"]

[tool.poe]
include = "scripts/poe/poe.toml"
verbosity = -1

[tool.poe.tasks.setup]
sequence = ["sync-githooks"]

[tool.poe.tasks.sync-githooks]
cmd = "python scripts/sync-githooks.py"

[tool.poe.tasks.check-news-fragments]
cmd = "scripts/poe/workspace_poe.py root-task check-news-fragments-root"

[tool.poe.tasks.check-news-fragments-root]
cmd = "python scripts/release.py check-news-fragments"

[tool.poe.tasks.fix]
cmd = "scripts/poe/workspace_poe.py workspace fix --poe-verbose ${verbose:-false} ${scopes}"
args = [
  { name = "verbose", options = ["-v", "--verbose"], type = "boolean" },
  { name = "scopes", positional = true, multiple = true },
]

[tool.poe.tasks.fix-root]
cmd = "scripts/poe/workspace_poe.py root-task fix-root"

[tool.poe.tasks.pre-commit]
cmd = "scripts/poe/workspace_poe.py hook pre-commit"

[tool.poe.tasks.pre-push]
cmd = "scripts/poe/workspace_poe.py hook pre-push"

[tool.poe.tasks.lint]
cmd = "scripts/poe/workspace_poe.py workspace lint --poe-verbose ${verbose:-false} ${scopes}"
args = [
  { name = "verbose", options = ["-v", "--verbose"], type = "boolean" },
  { name = "scopes", positional = true, multiple = true },
]

[tool.poe.tasks.lint-root]
cmd = "scripts/poe/workspace_poe.py root-task lint-root"

[tool.poe.tasks.lint-zizmor]
cmd = "zizmor --offline ."

[tool.poe.tasks.lint-towncrier]
cmd = "python scripts/release.py lint-towncrier"

[tool.poe.tasks.release-status]
cmd = "python scripts/release.py status"

[tool.poe.tasks.release]
shell = """
set --
if [ -n "${force_bump:-}" ]; then
  set -- "$@" --force-bump "$force_bump"
fi
python scripts/release.py release "$@"
"""
args = [{ name = "force_bump", options = ["--force-bump"] }]

[tool.poe.tasks.changelog]
cmd = "python scripts/release.py changelog"
use_exec = true

[tool.poe.tasks.clog]
cmd = "python scripts/release.py changelog"
use_exec = true

[tool.poe.tasks.dist]
cmd = "./scripts/build.sh"

[tool.poe.tasks.typecheck]
cmd = "scripts/poe/workspace_poe.py workspace typecheck --poe-verbose ${verbose:-false} ${scopes}"
args = [
  { name = "verbose", options = ["-v", "--verbose"], type = "boolean" },
  { name = "scopes", positional = true, multiple = true },
]

[tool.poe.tasks.typecheck-root]
cmd = "scripts/poe/workspace_poe.py root-task typecheck-root"

[tool.poe.tasks.typecheck-mypy]
cmd = "$MYPY ${WORKSPACE_POE_SCOPE_ARGS:-tests}"

[tool.poe.tasks.test]
cmd = "scripts/poe/workspace_poe.py workspace test --poe-verbose ${verbose:-false} ${scopes}"
args = [
  { name = "verbose", options = ["-v", "--verbose"], type = "boolean" },
  { name = "scopes", positional = true, multiple = true },
]

[tool.poe.tasks.test-root]
cmd = "scripts/poe/workspace_poe.py root-task test-root"

[tool.poe.tasks.qa]
cmd = "scripts/poe/workspace_poe.py qa --poe-quiet ${quiet} --poe-verbose ${verbose} ${scopes}"
args = [
  { name = "quiet", options = ["-q", "--quiet"], type = "boolean" },
  { name = "verbose", options = ["-v", "--verbose"], type = "boolean" },
  { name = "scopes", positional = true, multiple = true },
]
