[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[project]
name = "vercel-headers"
dynamic = ["version", "dependencies"]
description = "Request header helpers for Vercel Python applications"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "LICENSE.*"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.vercel.release.dependencies]
dependencies = []

[tool.hatch.version]
path = "vercel/headers/version.py"

[tool.hatch.build.targets.sdist]
force-include = { "../../scripts/hatch_build.py" = "/_vercel_hatch_build.py" }
include = [
    "/vercel/headers/**/*.py",
    "/vercel/headers/py.typed",
    "/README.md",
    "/pyproject.toml",
    "/hatch_build.py",
    "/LICENSE",
]
exclude = [
    "/**/__pycache__",
]

[tool.hatch.build.targets.wheel]
dev-mode-dirs = ["."]
only-include = [
    "/vercel/headers",
]
exclude = [
    "/**/__pycache__",
]

[tool.poe]
include = "../../scripts/poe/poe.toml"
verbosity = -1

[tool.mypy]
cache_dir = "../../.mypy_cache/vercel-headers"
explicit_package_bases = true
packages = ["vercel.headers"]

[tool.poe.tasks.typecheck]
cmd = "$MYPY"

[tool.poe.tasks.test]
cmd = "python -c \"pass\""
