[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[project]
name = "vercel-internal-core"
dynamic = ["version", "dependencies"]
description = "Shared internal runtime for Vercel Python packages"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "LICENSE.*"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.vercel.release.dependencies]
dependencies = [
    "httpx>=0.27.0,<1",
    "anyio>=4.0.0,<5",
    "typing-extensions>=4.0.0,<5 ; python_version < '3.11'",
]

[tool.hatch.version]
path = "vercel/internal/core/version.py"

[tool.hatch.build.targets.sdist]
force-include = { "../../scripts/hatch_build.py" = "/_vercel_hatch_build.py" }
include = [
    "/vercel/api/**",
    "/vercel/errors/**",
    "/vercel/internal/core/**",
    "/README.md",
    "/pyproject.toml",
    "/hatch_build.py",
    "/LICENSE",
]
exclude = [
    "/**/__pycache__",
]

[tool.hatch.build.targets.wheel]
dev-mode-dirs = ["."]
only-include = [
    "/vercel/api",
    "/vercel/errors",
    "/vercel/internal/core",
]
exclude = [
    "/**/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--no-header --capture=tee-sys"
asyncio_mode = "auto"

[tool.poe]
include = "../../scripts/poe/poe.toml"
verbosity = -1

[tool.mypy]
cache_dir = "../../.mypy_cache/vercel-internal-core"
explicit_package_bases = true
packages = ["vercel.internal.core"]

[tool.poe.tasks.typecheck]
cmd = "$MYPY"
