[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[project]
name = "vercel-internal-telemetry"
dynamic = ["version", "dependencies"]
description = "Internal telemetry helpers for Vercel Python packages"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "LICENSE.*"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.vercel.release.dependencies]
dependencies = [
    "httpx>=0.27.0,<1",
    "vercel-oidc>=0.6.0",
]

[tool.uv.sources]
vercel-oidc = { workspace = true }

[tool.hatch.version]
path = "vercel/internal/telemetry/version.py"

[tool.hatch.build.targets.sdist]
force-include = { "../../scripts/hatch_build.py" = "/_vercel_hatch_build.py" }
include = [
    "/vercel/internal/telemetry/**/*.py",
    "/vercel/internal/telemetry/py.typed",
    "/README.md",
    "/pyproject.toml",
    "/hatch_build.py",
    "/LICENSE",
]
exclude = [
    "/**/__pycache__",
]

[tool.hatch.build.targets.wheel]
dev-mode-dirs = ["."]
only-include = [
    "/vercel/internal/telemetry",
]
exclude = [
    "/**/__pycache__",
]

[tool.poe]
include = "../../scripts/poe/poe.toml"
verbosity = -1

[tool.mypy]
cache_dir = "../../.mypy_cache/vercel-internal-telemetry"
explicit_package_bases = true
packages = ["vercel.internal.telemetry"]

[tool.poe.tasks.typecheck]
cmd = "$MYPY"

[tool.poe.tasks.test]
cmd = "python -c \"pass\""
